# server/src/controllers/posts/writeImage.ts
@@ -3,6 +3,8 @@ import fs from 'fs'
 
 export const writeImagePost = (req:any,res:any) => {
   const file = req.files.image[0];
+
+  console.log('포스트',file.destination + '/' + file.filename);
   res.status(200).send(file.destination + '/' + file.filename)
 }
 
